change dir location.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,9 +107,9 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-  LIBRARIES learning_image_geometry
-  CATKIN_DEPENDS cv_bridge image_geometry image_transport image_view opencv2 tf
-  DEPENDS system_lib
+#  LIBRARIES learning_image_geometry
+#  CATKIN_DEPENDS cv_bridge image_geometry image_transport image_view opencv2 tf
+#  DEPENDS system_lib
 )
 
 ###########
